# KINDpos-lite

./: .dockerignore  .gitignore  AUDIT_internal_comms_20260407.md  CHANGELOG-font-contrast-pass.md  CHAOS_PROBE_REPORT.md  CHART_AUDIT_REPORT.md  CHART_CONVERSION_REPORT.md  CHART_VERIFICATION_REPORT.md  CONFIGURABLE_COMPONENTS.md  DEMO_BUG_AUDIT.md  Dockerfile  KINDPOS_GUARANTEES_AUDIT.md  KINDPOS_VS_TOAST.md  NAVIGATION_AUDIT_REPORT.md  ONBOARDING.md  PERSISTENT-SUMMARY-PROMPT.md  PERSISTENT-SUMMARY-REFACTOR.md  PHASE0_AUDIT.md  PRERELEASE_AUDIT_REPORT.md  README.md  REPORT_kitchen_ticket_fix.md  SALES_CALC_AUDIT.md  SHIFT_AUDIT_REPORT.md  SM2_MIGRATION_STATUS.md  TAURI_WRAPPER_SPEC.md  event_ledger_audit_report.md  fly.toml  frontend_stress_audit.md  modifier-multiselect-audit.md  playwright.config.js  print_live_test.py  printer_size_diagnostic.py  printer_width_test.py  pytest.ini  test_new_templates.py
backend/: hardware_config.db  (+3 more)
kindpos-desktop/src-tauri/: Cargo.toml  tauri.conf.json
kindpos-desktop/src-tauri/resources/backend/: seed_employees.py
kindpos-desktop/src-tauri/resources/backend/data/: demo_seed.json
kindpos-desktop/src-tauri/resources/backend/models/: config_events.py
kindpos-desktop/src-tauri/resources/frontend/js/: chart-patterns.js  components.js  half-placement-overlay.js  keyboard.js  pizza-builder-overlay.js  scene-manager.js
kindpos-desktop/src-tauri/resources/frontend/tests/: run-stress.mjs
kindpos-desktop/src-tauri/resources/overseer/src/: app.js
kindpos-desktop/src-tauri/src/: main.rs  port.rs  server.rs  sync.rs
(+286 files in other folders)
