[package]
name = "kindpos-desktop"
version = "1.3.0"
description = "KINDpos POS — Tauri desktop wrapper"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
ureq = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
